deployment/kubelinterbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubelinterbot
  labels:
    app: kubelinterbot
spec:
  securityContext:
    runAsUser: 1000
  replicas: 1
  selector:
    matchLabels:
      app: kubelinterbot
  template:
    metadata:
      labels:
        app: kubelinterbot
    spec:
      containers:
      - name: kubelinterbot
        image: kubelinterbot:0.1
        imagePullPolicy: Never  # delete after upload
        ports:
        - containerPort: 4567
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: kubelinterbot-service
spec:
  selector:
    app: kubelinterbot
  ports:
    - protocol: TCP
      port: 4567
      targetPort: 4567
